; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pccbb/extr_pccbb.c_cbb_cardbus_io_open.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pccbb/extr_pccbb.c_cbb_cardbus_io_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [45 x i8] c"cbb_cardbus_io_open: window out of range %d\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@CBBR_IOBASE0 = common dso_local global i32 0, align 4
@CBBR_IOLIMIT0 = common dso_local global i32 0, align 4
@SYS_RES_IOPORT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32)* @cbb_cardbus_io_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cbb_cardbus_io_open(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %17, label %14

14:                                               ; preds = %4
  %15 = load i32, i32* %7, align 4
  %16 = icmp sgt i32 %15, 1
  br i1 %16, label %17, label %22

17:                                               ; preds = %14, %4
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @DEVPRINTF(i32 %19)
  %21 = load i32, i32* @EINVAL, align 4
  store i32 %21, i32* %5, align 4
  br label %42

22:                                               ; preds = %14
  %23 = load i32, i32* %7, align 4
  %24 = mul nsw i32 %23, 8
  %25 = load i32, i32* @CBBR_IOBASE0, align 4
  %26 = add nsw i32 %24, %25
  store i32 %26, i32* %10, align 4
  %27 = load i32, i32* %7, align 4
  %28 = mul nsw i32 %27, 8
  %29 = load i32, i32* @CBBR_IOLIMIT0, align 4
  %30 = add nsw i32 %28, %29
  store i32 %30, i32* %11, align 4
  %31 = load i32, i32* %6, align 4
  %32 = load i32, i32* %10, align 4
  %33 = load i32, i32* %8, align 4
  %34 = call i32 @pci_write_config(i32 %31, i32 %32, i32 %33, i32 4)
  %35 = load i32, i32* %6, align 4
  %36 = load i32, i32* %11, align 4
  %37 = load i32, i32* %9, align 4
  %38 = call i32 @pci_write_config(i32 %35, i32 %36, i32 %37, i32 4)
  %39 = load i32, i32* %6, align 4
  %40 = load i32, i32* @SYS_RES_IOPORT, align 4
  %41 = call i32 @cbb_activate_window(i32 %39, i32 %40)
  store i32 0, i32* %5, align 4
  br label %42

42:                                               ; preds = %22, %17
  %43 = load i32, i32* %5, align 4
  ret i32 %43
}

declare dso_local i32 @DEVPRINTF(i32) #1

declare dso_local i32 @pci_write_config(i32, i32, i32, i32) #1

declare dso_local i32 @cbb_activate_window(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
